<resources>


    <string name="app_name">bookswap</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Action Bars -->
    <string name="search_title">Search</string>
    <string name="profile_title">Edit Profile</string>


    <!-- Navigation Menu Strings -->
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_post_ad">Post Ad</string>
    <string name="menu_sign_in">Sign In</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_camera">Test Camera</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment">Home Page Fragment!</string>
    <string name="profile_fragment">Profile Page Fragment</string>
    <string name="post_ad_fragment">Post Ad Page Fragment</string>

    <!-- Sign In Activiity String -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Sign In Page -->
    <string name="forgot_password_text">"forgot password ?"</string>
    <string name="no_account_text">"don't have an account ?"</string>
    <string name="click_here">"click here"</string>

    <!-- Forgot Password Page -->
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="forgot_password_page">Forgot Password </string>
    <string name="reset_password">reset password</string>
    <string name="forgot_pass_page_text">Please enter your email address, you will then receive an email with a link to choose a new password.</string>
    <string name="forgot_pass_img"> </string>
    <string name="prompt_email">Email</string>


    <!-- Create Account Page -->
    <string name="title_activity_create_account">Create Account</string>
    <string name="create_account_page">Create Account </string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ca_username">Username</string>
    <string name="ca_email">Email</string>
    <string name="ca_password">Password</string>
    <string name="ca_confirm_password">Confirm Password</string>
    <string name="action_create_account">Create Account</string>
    <string name="have_account_text">already have an account?</string>
    <string name="ca_sign_in">sign-in</string>

    <!-- View Ad Page -->
    <string name="buy_button">Buy It</string>
    <string name="make_offer_button">Make an Offer</string>
    <string name="content_description">Display image</string>

        <!-- Book value Categories -->
        <string name="cate_book_name">Book\'s name</string>
        <string name="cate_publish_year">Publish Year</string>
        <string name="cate_author_name">Author name</string>
        <string name="cate_edition_num">Edition Number</string>

        <!-- Default Values -->
        <string name="dollar">$33</string>
        <string name="distance">4km from you</string>
        <string name="book_name">Introduction to Algorithms</string>
        <string name="publish_year">1989</string>
        <string name="author_name"> Thomas H. Cormen, Charles E. Leiserson, Ronald Rivest, Clifford Stein</string>
        <string name="edition">1st</string>
        <string name="book_descript">This book helps readers understand the usage and importance of algorithms.</string>

    <string name="seller_title">Seller</string>

    <!-- - - - - - - - - - - - -->
    <!-- Post Ad Page -->
    <string name="post_ad_button">Post Ad</string>
    <string name="create_camera_button"> </string>
    <string name="post_ad_text">Fill form automatically with ISBN scan</string>
    <!-- book form strings -->
    <string name="book_title">Title</string>
    <string name="book_edition">Edition</string>
    <string name="book_release">Release Year</string>
    <string name="book_price">Price</string>
    <string name="book_subjectOrGenre">Subject/Genre</string>
    <string name="book_description">Description</string>

    <!-- Edit Profile Page -->
    <string name="account_info_text">Account Information</string>
    <string name="username">Username</string>
    <string name="change_password">Change Password</string>
    <string name="forgot_password">Forgot Password</string>

    <string name="personal_information">Personal Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temp"></string>
    <string name="school_information">School Information</string>
    <string name="school">School</string>
    <string name="campus">Campus</string>
    <string name="address_information">Address</string>
    <string name="address_line1">Address Line 1</string>
    <string name="address_line2">Address Line 2</string>
    <string name="address_line3">Address Line 3</string>
    <string name="country">Country</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="member_since">Member since 2019</string>
    <string name="ad_title">Ad Title</string>
    <string name="ad_price">price</string>
    <string name="ad_image_description">Main ad image</string>
    <string name="nav_message">Sign in to trade with bookswap</string>
    <string name="signup_message">Thank you for signing up with bookswap!</string>
    <string name="signup_message2">Please confirm through email before signing in
</string>
    <string name="signup_redirect_button">Sign in Now!</string>


</resources>
